dump tasks, fix test-wrap in tasks table

--- a/src/app/layouts/auto-hr-layout/auto-hr-layout.component.scss
+++ b/src/app/layouts/auto-hr-layout/auto-hr-layout.component.scss
@@ -39,7 +39,7 @@ body {
 
 table {
   flex-wrap: wrap;
-  overflow-wrap: anywhere;
+  //overflow-wrap: anywhere;
 }
 
 tr.example-detail-row {
